Fundo da água e Menu
Primeira versão do menu, sem nenhum tipo de verificação ou validação. Fundo dá água tem o efeito um pouco alterado.

--- a/dev-VR/THG_VR/Assembly-CSharp.csproj
+++ b/dev-VR/THG_VR/Assembly-CSharp.csproj
@@ -143,6 +143,8 @@
      <Compile Include="Assets\GoogleVR\Scripts\Utilities\GvrUIHelpers.cs" />
      <Compile Include="Assets\GoogleVR\Scripts\Video\GvrVideoPlayerTexture.cs" />
      <Compile Include="Assets\Scripts\Controller.cs" />
+     <Compile Include="Assets\Scripts\ScriptMenu.cs" />
+     <Compile Include="Assets\Scripts\SoundTrack.cs" />
      <Compile Include="Assets\Scripts\ambienteAquoso.cs" />
      <None Include="Assets\Standard Assets\Effects\GlassRefraction\Shaders\GlassStainedBumpDistort.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\BlendOneOne.shader" />
