Alterado para Low Poly
Agora o design será baseado na estratégia de design chamada 'Low Poly', que se baseia em polígonos visíveis e entendíveis pelo jogador.

--- a/dev-VR/THG_VR/Assembly-CSharp.csproj
+++ b/dev-VR/THG_VR/Assembly-CSharp.csproj
@@ -142,7 +142,9 @@
      <Compile Include="Assets\GoogleVR\Scripts\Utilities\GvrIntent.cs" />
      <Compile Include="Assets\GoogleVR\Scripts\Utilities\GvrUIHelpers.cs" />
      <Compile Include="Assets\GoogleVR\Scripts\Video\GvrVideoPlayerTexture.cs" />
+     <Compile Include="Assets\Scripts\Caracteristicas.cs" />
      <Compile Include="Assets\Scripts\Controller.cs" />
+     <Compile Include="Assets\Scripts\RemoveAgua.cs" />
      <Compile Include="Assets\Scripts\ScriptMenu.cs" />
      <Compile Include="Assets\Scripts\SoundTrack.cs" />
      <Compile Include="Assets\Scripts\ambienteAquoso.cs" />
