--- a/dev-VR/THG_VR/Assembly-CSharp.csproj
+++ b/dev-VR/THG_VR/Assembly-CSharp.csproj
@@ -143,11 +143,14 @@
      <Compile Include="Assets\GoogleVR\Scripts\Utilities\GvrUIHelpers.cs" />
      <Compile Include="Assets\GoogleVR\Scripts\Video\GvrVideoPlayerTexture.cs" />
      <Compile Include="Assets\Scripts\Caracteristicas.cs" />
+     <Compile Include="Assets\Scripts\CatchableObject.cs" />
      <Compile Include="Assets\Scripts\Controller.cs" />
+     <Compile Include="Assets\Scripts\CubeMovements.cs" />
      <Compile Include="Assets\Scripts\RemoveAgua.cs" />
      <Compile Include="Assets\Scripts\ScriptMenu.cs" />
      <Compile Include="Assets\Scripts\SoundTrack.cs" />
      <Compile Include="Assets\Scripts\ambienteAquoso.cs" />
+     <Compile Include="Assets\Scripts\collideScript.cs" />
      <None Include="Assets\Standard Assets\Effects\GlassRefraction\Shaders\GlassStainedBumpDistort.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\BlendOneOne.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\NoiseEffectShaderRGB.shader" />
@@ -259,7 +262,7 @@
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
  </Reference>
  <Reference Include="Google.ProtocolBuffers">
- <HintPath>F:/5oSemestreAtivo/__EU_FIZ/TCC/dev-VR/THG_VR/Assets/Plugins/Google.ProtocolBuffers.dll</HintPath>
+ <HintPath>C:/Temp/TCC/dev-VR/THG_VR/Assets/Plugins/Google.ProtocolBuffers.dll</HintPath>
  </Reference>
   </ItemGroup>
   <ItemGroup>
